KAT-1681 [WebService] Improve UI for REST & SOAP (#985)